# AgentDroid

./: .gitignore  .mcp.json  README.md  gemini-extension.json  package.json  pyproject.toml
.codex-plugin/: plugin.json
agent/: __init__.py  claw_agent.py  runtime.py  self_healing.py
agentdroid/: __init__.py
agentdroid/agent/: claw_agent.py  runtime.py  self_healing.py
agentdroid/android/: __init__.py
agentdroid/cli/: __init__.py  main.py
agentdroid/integrations/omo/: plugin.py
agentdroid/integrations/omx/: skills.json
agentdroid/mcp/: server.py
agentdroid/providers/: cli_provider.py  gemini.py  ollama.py
agentdroid/tools/: android_tools.py  recorder.py  teleport.py
agentdroid_mcp/: __init__.py  server.py
android/: device.py  manifest.py
cli/: main.py
commands/: devices.toml  inspect.toml  mirror.toml  screenshot.toml
mcp/: server.py
providers/: __init__.py  base.py  cli_provider.py  gemini.py  ollama.py
tools/: __init__.py  android_tools.py  base.py  script_writer.py  teleport.py
